--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<p>Hi bablu </p>
-  <p>new para</p>
-<p>mera name is bablu kumar<p>
-</body>
+	<head>
+		<title> HTML is Structure only (before) </title>
+	</head>
+	<body>
+		<h1 style="color: green; font-size: 60px; text-align: centre;"> HTML is Structure only</h1>
+		<p style="margin: 0 100px 0 100px; font-size: 1.5em;"> HyperText is the method by which you move around on the web — by clicking on special text called hyperlinks which bring you to the next page. The fact that it is hyper just means it is not linear — i.e. you can go to any place on the Internet whenever you want by clicking on links — there is no set order to do things in.</p>
+		<footer>
+			<hr>
+			<p style ="text-align: centre;"
+		       onclick="alert('EMAILING US IS USELESS');">Tech support: yeah.right@server-is-down.com</p>
+		</footer>
+	</body>
 </html>
+
